--- a/src/app/welcome/welcome.page.scss
+++ b/src/app/welcome/welcome.page.scss
@@ -1,7 +1,6 @@
 
-.welcome-container > .header {
-    -webkit-flex: 4;
-    padding-top: 20px;
+.welcome-container {
+	padding: 20px;
 }
 
 .welcome-container > .header > img {
