--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -1,6 +1,6 @@
 
 <ion-content scroll="false" class="welcome-container">
-    <div class = "ion-text-center logo">
+    <!-- <div class = "ion-text-center logo">
        <ion-img src="../../assets/img/penguin.png"></ion-img>
     </div>
     <div class = "ion-text-center">
@@ -13,5 +13,37 @@
     </div>
     <div>
       <app-navigation></app-navigation>
-    </div>
+    </div> -->
+
+    <ion-slides>
+
+        <ion-slide>
+          <img src="../../assets/img/penguin.png"/>
+          <h2>Welcome to the <b>ICA</b></h2>
+          <p>The <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code use.</p>
+        </ion-slide>
+
+        <ion-slide>
+          <img src="../../assets/img/penguin.png"/>
+          <h2>What is Ionic?</h2>
+          <p><b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies like HTML, CSS, and JavaScript.</p>
+        </ion-slide>
+
+        <ion-slide>
+          <img src="../../assets/img/penguin.png"/>
+          <h2>What is Ionic Pro?</h2>
+          <p><b>Ionic Pro</b> is a powerful set of services and features built on top of Ionic Framework that brings a totally new level of app development agility to mobile dev teams.</p>
+        </ion-slide>
+
+        <ion-slide>
+          <img src="../../assets/img/penguin.png"/>
+          <h2>Ready to Play?</h2>
+          <ion-button routerLink="/home" fill="clear">Continue <ion-icon slot="end" name="arrow-forward"></ion-icon></ion-button>
+        </ion-slide>
+      </ion-slides>
 </ion-content>
+
+
+    <!-- <ion-content fullscreen padding scroll-y="true">
+      
+    </ion-content> -->
