--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="challenges">
+    <ion-tab-button tab="">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="messaging">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>Messaging</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="penguin-species">
       <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-label>Pingu Info</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
