--- a/src/app/welcome/welcome.page.scss
+++ b/src/app/welcome/welcome.page.scss
@@ -1,30 +1,3 @@
-// .welcome-container {
-// 	padding: 20px;
-// }
-
-// .welcome-container > .header > img {
-// 	width: 40px;
-// 	height: 50px;
-// }
-
-// .welcome-container > .button-row img {
-//     max-width: 80%;
-// }
-
-// .welcome-container {
-//     display: -webkit-flex;
-//     -webkit-flex-direction: column;
-//     height: 100%;
-//     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efad62), color-stop(100%,#f7d47c));
-//     background: -webkit-linear-gradient(top, #efad62 0%,#f7d47c 100%);
-// }
-
-// .swiper-container{
-//     height: 100vh;
-//     .ion-slides {
-//         flex-direction: column
-//     }
-// }
 
 :root {
     --ion-safe-area-top: 20px;
@@ -45,4 +18,34 @@ ion-slide > img {
     max-height: 50%;
     max-width: 60%;
     margin: 36px 0;
+}
+ion-slide > div {
+	background-image: url('../../assets/img/background.png');
+	height: 100%;
+	width: 100%;
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;  
+}
+// ion-item {
+// 	padding-left: 100px;
+// 	padding-right: 100px;
+// }
+
+ion-item > ion-label {
+	margin-left: 30px;
+}
+
+ion-avatar.penguin {
+	height: 80px;
+	width: 80px;
+	border: 1px solid;
+}
+
+.penguin-speech {
+	background-image: url('../../assets/img/penguin_welcome.png') !important;
+}
+
+.penguin-speech > div {
+	margin-top: 50px;
 }
