--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,28 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <ion-router-outlet></ion-router-outlet>
+
+    <ion-tabs *ngIf="router.url != '/'">
+        <ion-tab-bar slot="bottom">
+            <ion-tab-button tab="home">
+                <ion-icon name="home"></ion-icon>
+                <ion-label>Home</ion-label>
+            </ion-tab-button>
+
+            <ion-tab-button tab="challenges">
+                <ion-icon name="calendar"></ion-icon>
+                <ion-label>Challenges</ion-label>
+            </ion-tab-button>
+
+            <ion-tab-button tab="chat">
+                <ion-icon name="text"></ion-icon>
+                <ion-label>Chat</ion-label>
+                <ion-badge>6</ion-badge>
+            </ion-tab-button>
+
+            <ion-tab-button tab="about">
+                <ion-icon name="information-circle"></ion-icon>
+                <ion-label>About</ion-label>
+            </ion-tab-button>
+        </ion-tab-bar>
+    </ion-tabs>
 </ion-app>
