--- a/src/app/challenges/challenges.page.html
+++ b/src/app/challenges/challenges.page.html
@@ -1,9 +1,27 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>challenges</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>challenges</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <ion-list>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>Item</ion-label>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
 
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>Item</ion-label>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+</ion-list>
 </ion-content>
