--- a/src/app/welcome/welcome.page.scss
+++ b/src/app/welcome/welcome.page.scss
@@ -1,4 +1,3 @@
-
 :root {
     --ion-safe-area-top: 20px;
     --ion-safe-area-bottom: 22px;
@@ -20,12 +19,12 @@ ion-slide > img {
     margin: 36px 0;
 }
 ion-slide > div {
-	background-image: url('../../assets/img/background.png');
-	height: 100%;
-	width: 100%;
-    background-size:     cover;
-    background-repeat:   no-repeat;
-    background-position: center center;  
+    background-image: url("../../assets/img/background.png");
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 // ion-item {
 // 	padding-left: 100px;
@@ -33,19 +32,19 @@ ion-slide > div {
 // }
 
 ion-item > ion-label {
-	margin-left: 30px;
+    margin-left: 30px;
 }
 
 ion-avatar.penguin {
-	height: 80px;
-	width: 80px;
-	border: 1px solid;
+    height: 80px;
+    width: 80px;
+    border: 1px solid;
 }
 
 .penguin-speech {
-	background-image: url('../../assets/img/penguin_welcome.png') !important;
+    background-image: url("../../assets/img/penguin_welcome.png") !important;
 }
 
 .penguin-speech > div {
-	margin-top: 50px;
+    margin-top: 50px;
 }
