--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
-
-    <ion-tabs *ngIf="router.url != '/'">
-        <ion-tab-bar slot="bottom">
+    <ion-tabs >
+        <ion-tab-bar slot="bottom" [ngClass]="router.url == '/' || router.url == '/chat' ? 'hide':''">
             <ion-tab-button tab="home">
                 <ion-icon name="home"></ion-icon>
                 <ion-label>Home</ion-label>
@@ -15,7 +14,7 @@
 
             <ion-tab-button tab="chat">
                 <ion-icon name="text"></ion-icon>
-                <ion-label>Chat</ion-label>
+                <ion-label >Chat</ion-label>
                 <ion-badge>6</ion-badge>
             </ion-tab-button>
 
