--- a/src/app/challenges/challenges.page.html
+++ b/src/app/challenges/challenges.page.html
@@ -1,27 +1,30 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>challenges</ion-title>
+        <ion-list-header>
+            Upcoming Challenges
+        </ion-list-header>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-list>
-  <ion-item-sliding>
-    <ion-item>
-      <ion-label>Item</ion-label>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)">Unread</ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-  <ion-item-sliding>
-    <ion-item>
-      <ion-label>Item</ion-label>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)">Unread</ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-</ion-list>
+    <ion-list lines="none" style="background-color: lightblue">
+        <ion-card
+            style="padding: 5px 0; margin: 10px 5px; box-shadow: none; background-color: #fff;"
+            *ngFor="let challenge of challenges"
+        >
+            <ion-item>
+                <ion-avatar slot="start" style="width: 85px; height: 85px;">
+                    <img
+                        src="./avatar-finn.png"
+                        style="background-color: lightgrey"
+                    />
+                </ion-avatar>
+                <ion-label class="card">
+                    <h2>Finn</h2>
+                    <h3>I'm a big deal</h3>
+                    <p>Listen, I've had a pretty messed up day...</p>
+                </ion-label>
+            </ion-item>
+        </ion-card>
+    </ion-list>
 </ion-content>
