update welcome slides

--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -39,8 +39,14 @@
                 <div>
                     <h2>Hi I'm Franziska!</h2>
                     <p>
-                        Thank you for choosing me :)! <br />
-                        Some more infos about
+                        Thank you for choosing me :-)! <br />
+                        I am 90 cm tall and weigh 10kg. <br />
+                        I like eating and teasing my<br />
+                        brother Ferdinand.  <br />
+                        I will guide you through the <br />  
+                        challenges and keep you updated  <br />
+                        about events from the zoo!
+                    </p>
                     </p>
                     <ion-button routerLink="/challenges"
                         >Let's start with a challenge</ion-button
