--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
-    <ion-tabs >
-        <ion-tab-bar slot="bottom" [ngClass]="router.url == '/' || router.url == '/chat' ? 'hide':''">
+    <ion-tabs>
+        <ion-tab-bar
+            color="primary"
+            slot="bottom"
+            [ngClass]="router.url == '/' || router.url == '/chat' ? 'hide' : ''"
+        >
             <ion-tab-button tab="home">
                 <ion-icon name="home"></ion-icon>
                 <ion-label>Home</ion-label>
@@ -14,8 +18,8 @@
 
             <ion-tab-button tab="chat">
                 <ion-icon name="text"></ion-icon>
-                <ion-label >Chat</ion-label>
-                <ion-badge>6</ion-badge>
+                <ion-label>Chat</ion-label>
+                <ion-badge color="success">2</ion-badge>
             </ion-tab-button>
 
             <ion-tab-button tab="about">
