Challenges page data

--- a/src/app/challenges/challenges.page.html
+++ b/src/app/challenges/challenges.page.html
@@ -2,7 +2,7 @@
     <ion-title>Upcoming Challenges</ion-title>
 </ion-toolbar>
 <ion-content>
-    <ion-list lines="none">
+    <ion-list lines="none" style="height: 100%">
         <ion-card
             style="padding: 5px 0; margin: 10px 5px; "
             *ngFor="let challenge of challenges"
@@ -15,9 +15,16 @@
                     />
                 </ion-avatar>
                 <ion-label class="card">
-                    <h2>Finn</h2>
-                    <h3>I'm a big deal</h3>
-                    <p>Listen, I've had a pretty messed up day...</p>
+                    <h2>{{challenge.name}}</h2>
+                    <p style="height: 35px; white-space: initial;">{{challenge.desc}}</p>
+                    <div class="difficulty">
+                      <span *ngFor="let x of [1,2,3,4,5]" [ngClass]="challenge.level >= x ? 'active ' +'level-'+challenge.level  :''"></span>
+                      <!-- <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span> -->
+                    </div>
                 </ion-label>
             </ion-item>
         </ion-card>
