--- a/src/app/penguin-species/penguin-species.page.html
+++ b/src/app/penguin-species/penguin-species.page.html
@@ -1,9 +1,19 @@
 <ion-content class="">
-    <div class="species-container" [ngClass]="selectedSpecie.id != 0 ? 'specice-selected':''">
+    <div
+        class="species-container"
+        [ngClass]="selectedSpecie.id != 0 ? 'specice-selected' : ''"
+    >
         <div class="specice-selected-container">
-            <img [src]="'../../assets/img/species/' +selectedSpecie.img"/>
+            <img [src]="'../../assets/img/species/' + selectedSpecie.img" />
         </div>
-        <h2>Let's Save Penguins!</h2>
+        <div style="padding: 10px 15px;">
+            <h2 style="margin-top: 0; ">Know more about Penguins!</h2>
+            <p style="line-height: 25px">
+                Penguins are a group of aquatic flightless birds. They live
+                almost exclusively in the Southern Hemisphere, let's know
+                more...
+            </p>
+        </div>
         <ul
             class="radial-nav"
             (click)="showAll($event)"
@@ -16,11 +26,11 @@
                 [ngClass]="[specie.id == selectedSpecie.id ? ' selected' : '']"
             >
                 <a (click)="showPenguin($event, specie.id)">
-                    <img [src]="'../../assets/img/species/' + specie.img" />
+                    <img [src]="'./../../assets/img/species/' + specie.img" />
                 </a>
             </li>
             <li class="menu" *ngIf="selectedSpecie.id == 0">
-                <ion-button>Start</ion-button>
+                <ion-button>Pick a specie</ion-button>
                 <!-- <ion-fab size="large" vertical="center" horizontal="center" slot="fixed">
                     <ion-fab-button>
                         <ion-icon name="md-apps"></ion-icon>
@@ -34,8 +44,16 @@
             </li>
         </ul>
         <div class="specice-selected-container-content">
-            <h2 class="ion-text-center" style="margin-top: 70px;">{{selectedSpecie.name}}</h2>
-            <p style="padding: 10px 15px;">{{selectedSpecie.desc}}</p>
+            <h2 class="ion-text-center" style="margin-top: 100px;">
+                {{ selectedSpecie.name }}
+            </h2>
+            <p style="padding: 10px 15px; line-height: 26px">
+                {{ selectedSpecie.desc }}
+            </p>
+
+            <div style="text-align: center">
+                <ion-button routerLink="/challenge-completed">Next</ion-button>
+            </div>
         </div>
     </div>
 </ion-content>
