--- a/src/app/penguin-species/penguin-species.page.scss
+++ b/src/app/penguin-species/penguin-species.page.scss
@@ -14,6 +14,9 @@ $avatar-size: 120px;
         z-index: 9;
         img {
             height: 100%;
+            width: 100%;
+            object-fit: cover;
+            object-position: top center;
         }
         &-content {
             z-index: 8;
