--- a/src/app/challenge-completed/challenge-completed.page.html
+++ b/src/app/challenge-completed/challenge-completed.page.html
@@ -1,4 +1,19 @@
-
 <ion-content>
-<img src="./../../assets/img/ChallengeSuccess.png" alt="" style="position: fixed; top: 0;left: 0;bottom: 0;right: 0; width: 100%;">
+    <div  style="position: fixed; left: 15px;top: 20px;right: 15px; width: 100%; z-index: 99;">
+        <h3>Congratulations!</h3>
+        <p>
+            You completed your 1st Challenege
+        </p>
+    </div>
+    <ion-button
+        color="success"
+        routerLink="/challenges"
+        style="position: fixed; left: 10px;bottom: 10px;right: 10px; width: 92%; z-index: 99;"
+        >Done!</ion-button
+    >
+    <img
+        src="./../../assets/img/ChallengeSuccess.png"
+        alt=""
+        style="position: fixed; top: 0;left: 0;bottom: 0;right: 0; width: 100%;"
+    />
 </ion-content>
