--- a/src/app/penguin-species/penguin-species.page.html
+++ b/src/app/penguin-species/penguin-species.page.html
@@ -7,8 +7,26 @@
             <img [src]="'../../assets/img/species/' + selectedSpecie.img" />
         </div>
         <div style="padding: 10px 15px;">
-            <h2 style="margin-top: 0; ">Know more about Penguins!</h2>
-            <p style="line-height: 25px">
+           <div style="white-space: nowrap; display: flex;align-items: center; margin-top: 10px;">
+                <div style="margin-top: 0; display: inline-block;">
+                <ion-button
+                    color="white"
+                    size="small"
+                    routerLink="/challenges"
+                    icon
+                    flat
+                >
+                    <ion-icon
+                        name="arrow-back"
+                        style="color: #000; font-size: 25px;"
+                    ></ion-icon
+                ></ion-button>
+            </div>
+            <h2 style="margin-top: 0; display: inline-block;">
+                Know more about <br/> Penguins!
+            </h2>
+           </div>
+            <p style="line-height: 25px; margin:  10px;">
                 Penguins are a group of aquatic flightless birds. They live
                 almost exclusively in the Southern Hemisphere, let's know
                 more...
@@ -51,9 +69,11 @@
                 {{ selectedSpecie.desc }}
             </p>
 
-            <div style="text-align: center">
-                <ion-button routerLink="/challenge-completed">Next</ion-button>
-            </div>
+            <ion-button
+                style="width:93%; position: absolute; left: 10px; right: 10px; bottom: 10px;"
+                routerLink="/challenge-completed"
+                >Next</ion-button
+            >
         </div>
     </div>
 </ion-content>
