--- a/src/app/single-challenge/single-challenge.page.html
+++ b/src/app/single-challenge/single-challenge.page.html
@@ -1,7 +1,12 @@
 <ion-header color="primary">
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
+            <ion-button routerLink="/challenges">
+                <ion-icon
+                    name="arrow-back"
+                    style="color: #fff; font-size: 25px;"
+                ></ion-icon
+            ></ion-button>
         </ion-buttons>
         <ion-title>Fish consumption</ion-title>
     </ion-toolbar>
@@ -12,6 +17,10 @@
         style="background-color: lightgrey; border-radius: 50%; margin: 10px 20px;"
     />
     <p style="margin: 10px; line-height: 26px">
-      Human fish consumption has quadrupled over the last 50 years. This has a direct impact on the penguins as their main food resource is shrinking dramatically. In addition, penguins regularly get caught in nets of fisheries and die. The goal of this challenge is therefore to reduce the consumption of wild cuaght fish.
+        Human fish consumption has quadrupled over the last 50 years. This has a
+        direct impact on the penguins as their main food resource is shrinking
+        dramatically. In addition, penguins regularly get caught in nets of
+        fisheries and die. The goal of this challenge is therefore to reduce the
+        consumption of wild cuaght fish.
     </p>
 </ion-content>
