--- a/src/app/single-challenge/single-challenge.page.html
+++ b/src/app/single-challenge/single-challenge.page.html
@@ -23,4 +23,10 @@
         fisheries and die. The goal of this challenge is therefore to reduce the
         consumption of wild cuaght fish.
     </p>
+    <ion-button
+        color="primary"
+        routerLink="/home"
+        style="position: fixed; left: 10px;bottom: 10px;right: 10px; width: 92%; z-index: 99;"
+        >Start Challenge</ion-button
+    >
 </ion-content>
