--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
-.hide {
-  display: none;
+.tabsbar {
+    transition: ease 0.5s all;
+    &.hide {
+        opacity: 0;
+        height: 0;
+        overflow: hidden;
+    }
 }
