--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -2,11 +2,11 @@
     <ion-slides #theSlides>
         <ion-slide>
             <div>
-                <img
+<!--                 <img
                     src="../../assets/img/penguin.png"
                     style="width: 200px; margin-top: 100px;"
-                />
-                <h2>Welcome to the <b>[ Penguin App ]</b></h2>
+                /> -->
+                <h1>Welcome to <b>Peyond</b>!</h1>
                 <p>
                     The Penguins need your help. <br />
                     Swipe left to get started!
