--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -2,12 +2,19 @@
     <ion-slides #theSlides>
         <ion-slide>
             <div>
-<!--                 <img
-                    src="../../assets/img/penguin.png"
-                    style="width: 200px; margin-top: 100px;"
-                /> -->
-                <h1>Welcome to <b>Peyond</b>!</h1>
-                <p>
+                <h3
+                    style="text-align: left; margin-bottom: 40px;margin-left: 40px;margin-top: 100px; font-weight: 300"
+                >
+                    Welcome to
+                </h3>
+                <img
+                    src="../../assets/img/peyondlogo.png"
+                    style="width: 200px; border-radius: 20px"
+                />
+                <p style="font-weight: 100; font-size: 20px">
+                    Peyond your HABITS
+                </p>
+                <p style="margin-top: 250px;">
                     The Penguins need your help. <br />
                     Swipe left to get started!
                 </p>
@@ -19,6 +26,8 @@
                 <h2>Choose your Guide</h2>
                 <ion-list>
                     <ion-item
+                        lines="none"
+                        style="padding:10px"
                         button
                         *ngFor="let penguin of penguins"
                         (click)="move(theSlides, 2, penguin.name)"
@@ -42,9 +51,9 @@
                         Thank you for choosing me :-)! <br />
                         I am 90 cm tall and weigh 10kg. <br />
                         I like eating and teasing my<br />
-                        brother Ferdinand.  <br />
-                        I will guide you through the <br />  
-                        challenges and keep you updated  <br />
+                        brother Ferdinand. <br />
+                        I will guide you through the <br />
+                        challenges and keep you updated <br />
                         about events from the zoo!
                     </p>
                     <ion-button routerLink="/challenges"
