--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,9 +1,17 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>About</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-title>About</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div style="padding: 20px;">Created with love!</div>
+    <div style="text-align: center; padding: 20px" class="about-container">
+        <img
+            src="../../assets/img/peyondlogo.png"
+            style="width: 200px; border-radius: 20px"
+        />
+        <div style="padding: 20px;">Created with love!</div>
+
+        Jenny Schmid, Xenia Münger,<br/>Mina Moanes, Tenzen Rabgang
+    </div>
 </ion-content>
